@@ -1,3 +1,13 @@
+2016-02-17  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-439
+	
+	* src/methods.cc, src/m_general.cc (GetEnvironmentVariable):
+
+	Throw runtime error if environment variable does not exist.
+
+	Add option to interpret environment variable as Index.
+
 2016-02-16 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-438
